# python-llama-cpp-http

./: .gitignore  CHANGELOG.md  LICENSE  LLAMA_CPP.md  README.md  pyproject.toml
llama_cpp_http/: __init__.py  client.py  client_aiohttp.py  client_websockets.py  server.py
llama_cpp_http/client/: __init__.py  langchain_llama_cpp_client.py  langchain_llama_cpp_embeddings_client.py
misc/: example_client_call.py  example_client_call_2.py  example_client_embedding_call.py  example_client_langchain_embedding.py  example_client_langchain_stream.py  example_client_stream.py  example_client_stream_2.py  example_client_stream_codellama.py
